libraries/vdifio/src/vdifio.h


typedef struct vdif_header {
   uint32_t seconds : 30;
   uint32_t legacymode : 1;
   uint32_t invalid : 1;
   uint32_t frame : 24;
   uint32_t epoch : 6;
   uint32_t unassigned : 2;
   uint32_t framelength8 : 24;	
   uint32_t nchan : 5;
   uint32_t version : 3;
   uint32_t stationid : 16;
   uint32_t threadid : 10;
   uint32_t nbits : 5;
   uint32_t iscomplex : 1;
   uint32_t extended1 : 24;
   uint32_t eversion : 8;
   uint32_t extended2;
   uint32_t extended3;
   uint32_t extended4;
} vdif_header;
typedef struct vdif_edv1_header {	
   uint32_t seconds : 30;
   uint32_t legacymode : 1;
   uint32_t invalid : 1;
   uint32_t frame : 24;
   uint32_t epoch : 6;
   uint32_t unassigned : 2;
   uint32_t framelength8 : 24;	
   uint32_t nchan : 5;
   uint32_t version : 3;	
   uint32_t stationid : 16;
   uint32_t threadid : 10;
   uint32_t nbits : 5;
   uint32_t iscomplex : 1;
   uint32_t samprate : 23;	
   uint32_t samprateunits : 1;	
   uint32_t eversion : 8;
   uint32_t syncword;		
   char name[8];		
 } vdif_edv1_header;
typedef struct vdif_edv2_header_generic { 
   uint32_t seconds : 30;
   uint32_t legacymode : 1;
   uint32_t invalid : 1;
   uint32_t frame : 24;
   uint32_t epoch : 6;
   uint32_t unassigned : 2;
   uint32_t framelength8 : 24;	
   uint32_t nchan : 5;
   uint32_t version : 3;	
   uint32_t stationid : 16;
   uint32_t threadid : 10;
   uint32_t nbits : 5;		
   uint32_t iscomplex : 1;	
   uint32_t notrelevant : 4;	
   uint32_t subsubversion : 20;	
   uint32_t eversion : 8;	
   uint32_t word5 : 32;		
   uint32_t word6 : 32;		
   uint32_t word7 : 32;		
} vdif_edv2_header_generic;
typedef struct vdif_edv2_header_alma {	
   uint32_t seconds : 30;
   uint32_t legacymode : 1;
   uint32_t invalid : 1;
   uint32_t frame : 24;
   uint32_t epoch : 6;
   uint32_t unassigned : 2;
   uint32_t framelength8 : 24;	
   uint32_t nchan : 5;
   uint32_t version : 3;	
   uint32_t stationid : 16;
   uint32_t threadid : 10;
   uint32_t nbits : 5;
   uint32_t iscomplex : 1;
   uint32_t polblock : 1;	
   uint32_t quadrantminus1 : 2;	
   uint32_t correlator : 1;	
   uint32_t subsubversion : 20;	
   uint32_t eversion : 8;	
   uint32_t picstatus;		
   uint64_t psn;		
} vdif_edv2_header_alma;
typedef struct vdif_edv2_header_r2dbe { 
   uint32_t seconds : 30;
   uint32_t legacymode : 1;
   uint32_t invalid : 1;
   uint32_t frame : 24;
   uint32_t epoch : 6;
   uint32_t unassigned : 2;
   uint32_t framelength8 : 24;	
   uint32_t nchan : 5;
   uint32_t version : 3;	
   uint32_t stationid : 16;
   uint32_t threadid : 10;
   uint32_t nbits : 5;		
   uint32_t iscomplex : 1;	
   uint32_t polblock : 1;	
   uint32_t bdcsideband : 1;	
   uint32_t rxsideband  : 1;	
   uint32_t undefined : 1;
   uint32_t subsubversion : 20;	
   uint32_t eversion : 8;	
   int32_t ppsdiff : 32;	
   uint64_t psn;		
} vdif_edv2_header_r2dbe;
typedef struct vdif_edv2_header {	
   uint32_t seconds : 30;
   uint32_t legacymode : 1;
   uint32_t invalid : 1;
   uint32_t frame : 24;
   uint32_t epoch : 6;
   uint32_t unassigned : 2;
   uint32_t framelength8 : 24;	
   uint32_t nchan : 5;
   uint32_t version : 3;	
   uint32_t stationid : 16;
   uint32_t threadid : 10;
   uint32_t nbits : 5;
   uint32_t iscomplex : 1;
   uint32_t polblock : 1;
   uint32_t quadrantminus1 : 2;	
   uint32_t correlator : 1;	
   uint32_t sync : 20;		
   uint32_t eversion : 8;
   uint32_t status;		
   uint64_t psn;		
} vdif_edv2_header;
typedef struct vdif_edv3_header {	
   uint32_t seconds : 30;
   uint32_t legacymode : 1;
   uint32_t invalid : 1;
   uint32_t frame : 24;
   uint32_t epoch : 6;
   uint32_t unassigned : 2;
   uint32_t framelength8 : 24;	
   uint32_t nchan : 5;
   uint32_t version : 3;
   uint32_t stationid : 16;
   uint32_t threadid : 10;
   uint32_t nbits : 5;
   uint32_t iscomplex : 1;
   uint32_t samprate : 23;	
   uint32_t samprateunits : 1;	
   uint32_t eversion : 8;	
   uint32_t syncword;		
   uint32_t tuning;		
   uint32_t personalitytype : 8;
   uint32_t minorrev : 4;	
   uint32_t majorrev : 4;	
   uint32_t sideband : 1;	
   uint32_t subband : 3;	
   uint32_t ifnumber : 4;	
   uint32_t dbeunit : 4;	
   uint32_t unassigned2 : 4;
 } vdif_edv3_header;
typedef struct vdif_edv4_header {	
   uint32_t seconds : 30;
   uint32_t legacymode : 1;
   uint32_t invalid : 1;
   uint32_t frame : 24;
   uint32_t epoch : 6;
   uint32_t unassigned : 2;
   uint32_t framelength8 : 24;	
   uint32_t nchan : 5;
   uint32_t version : 3;
   uint32_t stationid : 16;
   uint32_t threadid : 10;
   uint32_t nbits : 5;
   uint32_t iscomplex : 1;
   uint32_t dummy : 16;
   uint32_t masklength : 8;	
   uint32_t eversion : 8;	
   uint32_t syncword;		
   uint64_t validitymask;	
 } vdif_edv4_header;
enum VDIFHeaderPrintLevel	
{
	VDIFHeaderPrintLevelHex = 0,	
	VDIFHeaderPrintLevelColumns,	
	VDIFHeaderPrintLevelShort,	
	VDIFHeaderPrintLevelLong	
};
const char *VDIFErrorMessage(int errorCode);
int createVDIFHeader(vdif_header *header, int dataarraylength, int threadid, int bits, int nchan,
		     int iscomplex, char stationid[3]);
uint64_t getVDIFFrameMJDSec(vdif_header *header);
int getVDIFFrameMJD(const vdif_header *header);
double getVDIFFrameDMJD(const vdif_header *header, int framepersec);
int getVDIFNumChannels(const vdif_header *header);
int getVDIFEpochMJD(const vdif_header *header);
int setVDIFFrameMJD(vdif_header *header, int framemjd);
int setVDIFFrameMJDSec(vdif_header *header, uint64_t mjdsec);
int setVDIFFrameBytes(vdif_header *header, int bytes);
int setVDIFFrameSecond(vdif_header *header, int seconds);
int setVDIFNumChannels(vdif_header *header, int numchannels);
int setVDIFThreadID(vdif_header *header, int threadid);
int setVDIFFrameTime(vdif_header *header, time_t time);
int setVDIFEpochTime(vdif_header *header, time_t time);
int setVDIFEpochMJD(vdif_header *header, int mjd);
int nextVDIFHeader(vdif_header *header, int framepersec);
int incrementVDIFHeader(vdif_header *header, int framepersec, int64_t inc);
void fprintVDIFHeader(FILE *out, const vdif_header *header, enum VDIFHeaderPrintLevel);
void printVDIFHeader(const vdif_header *header, enum VDIFHeaderPrintLevel);
int determinevdifframesize(const unsigned char *buffer, int bufferSize);
int determinevdifframeoffset(const unsigned char *buffer, int bufferSize, int frameSize);
struct vdif_mux {
  int inputFrameSize;					
  int inputDataSize;					
  int outputFrameSize;					
  int outputDataSize;					
  int inputFramesPerSecond;				
  int inputChannelsPerThread;				
  int bitsPerSample;					
  int nThread;
  int nSort;						
  int nGap;						
  int frameGranularity;
  int nOutputChan;					
  int complexFactor;					
  int fanoutFactor;					
  unsigned int flags;
  uint16_t chanIndex[VDIF_MAX_THREAD_ID+1];		
  uint64_t goodMask;
  void (*cornerTurner)(unsigned char *, const unsigned char * const *, int);
};
struct vdif_mux_statistics {
  long long nValidFrame;		
  long long nInvalidFrame;		
  long long nDiscardedFrame;		
  long long nWrongThread;		
  long long nSkippedByte;		
  long long nFillByte;			
  long long nDuplicateFrame;		
  long long bytesProcessed;		
  long long nGoodFrame;			
  long long nPartialFrame;		
  long long nFillerFrame;		
  int nCall;				
  int nOutOfDataConditions;             
  int srcSize;			
  int srcUsed;			
  int destSize;			
  int destUsed;			
  int inputFrameSize;		
  int outputFrameSize;		
  int outputFrameGranularity;	
  int outputFramesPerSecond;	
  int nOutputFrame;		
  int epoch;			
  int64_t startFrameNumber;
};
int configurevdifmux(struct vdif_mux *vm, int inputFrameSize, int inputFramesPerSecond, int bitsPerSample, int nThread, const int *threadIds, int nSort, int nGap, int flags);
int setvdifmuxinputchannels(struct vdif_mux *vm, int inputChannelsPerThread);
int setvdifmuxfanoutfactor(struct vdif_mux *vm, int fanoutFactor);
void printvdifmux(const struct vdif_mux *vm);
int vdifmux(unsigned char *dest, int destSize, const unsigned char *src, int srcSize, const struct vdif_mux *vm, int64_t startOutputFrameNumber, struct vdif_mux_statistics *stats);
void printvdifmuxstatistics(const struct vdif_mux_statistics *stats);
void resetvdifmuxstatistics(struct vdif_mux_statistics *stats);
void testvdifcornerturners(int outputBytes, int nTest);
struct vdif_file_summary {
  char fileName[VDIF_SUMMARY_FILE_LENGTH];  
  long long fileSize;	
  int nBit;
  int nThread;
  int threadIds[VDIF_SUMMARY_MAX_THREADS];
  int frameSize;	
  int framesPerSecond;	
  int epoch;		
  int startSecond;	
  int startFrame;	
  int endSecond;	
  int endFrame;		
  int firstFrameOffset;	
};
void resetvdiffilesummary(struct vdif_file_summary *sum);
void printvdiffilesummary(const struct vdif_file_summary *sum);
void snprintvdiffilesummary(char *str, int maxLength, const struct vdif_file_summary *sum);
int vdiffilesummarygetstartmjd(const struct vdif_file_summary *sum);
int summarizevdiffile(struct vdif_file_summary *sum, const char *fileName, int frameSize);
struct vdif_file_reader {
  struct vdif_file_summary details;
  FILE *fd[VDIF_SUMMARY_MAX_THREADS];
  vdif_header currheader[VDIF_SUMMARY_MAX_THREADS];
  uint_fast32_t sec[VDIF_SUMMARY_MAX_THREADS];
  int feof[VDIF_SUMMARY_MAX_THREADS];
  uint_fast32_t syncpoint_sec;
  uint_fast32_t syncpoint_framenr;
  int eof;
  int fps;
  off_t firstframeoffset;
  off_t virtualoffset;
};
struct vdif_file_reader_stats {
  int nThread;
  off_t threadOffsets[VDIF_SUMMARY_MAX_THREADS];
  off_t maxOffset;
};
int vdifreaderOpen(const struct vdif_file_summary *sum, struct vdif_file_reader *rd);
int vdifreaderClose(struct vdif_file_reader *rd);
size_t vdifreaderRead(struct vdif_file_reader *rd, void *buf, size_t count);
size_t vdifreaderSeek(struct vdif_file_reader *rd, size_t offset);
int vdifreaderStats(const struct vdif_file_reader *rd, struct vdif_file_reader_stats *st);